--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "build": "webpack"
   },
   "dependencies": {
+    "bulma": "^0.7.4",
+    "bulma-slider": "^2.0.0",
     "clean-webpack-plugin": "^1.0.1",
     "lodash": "latest"
   },
